# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  12 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh:
  Commented out the package.provided code in catalyst that seemed to cause
  problems with kerncache in testing. This is 2.0.4 and should be used for the
  2007.0 release.

  12 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/netboot2_target.py, targets/netboot2/netboot2-controller.sh,
  targets/netboot2/netboot2-copyfile.sh, targets/support/functions.sh,
  targets/support/netboot2-final.sh, targets/support/pre-kmerge.sh:
  Added a patch from Andrew Gaffney <agaffney@gentoo.org> from bug #173826 to
  improve the netboot2 target.

  10 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Added a patch from Mike Frysinger <vapier@gentoo.org> for bug #173740 to
  cause catalyst to export boolean variables as well as string-based
  variables.

  10 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fixing check for invalid subarch to not filter too much. Fix from Mike
  Frysinger <vapier@gentoo.org> for bug #173532.

  10 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org> arch/s390.py:
  Added s390x (64-bit) support via a patch from Mike Frysinger
  <vapier@gentoo.org> for bug #173002.

  10 Apr 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-chroot.sh, targets/netboot/netboot-combine.sh,
  targets/netboot2/netboot2-pkg.sh, targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-controller.sh, targets/stage2/stage2-chroot.sh,
  targets/stage3/stage3-chroot.sh, targets/stage4/stage4-chroot.sh,
  targets/support/chroot-functions.sh, targets/support/kmerge.sh,
  targets/support/pre-kmerge.sh:
  Added setup_myemergeopts to setup_myfeatures and removed redundant calls to